footer in index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             border-radius: 20px;
             
         }
+        li #footer {
+            float: left;
+        }
     </style>
   <head>
     <title>Google Home Project</title>
@@ -63,7 +66,10 @@
     </center>
       </div>
       <div class="footer">
-
+        <ul>
+            <li><a href="https://google.com/about">About</a></li>
+            <li>Advertising</li>
+        </ul>
       </div>
       </main>
   </body>
