--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             border-radius: 20px;
             
         }
-        li #footer {
+        #footer li {
             float: left;
         }
     </style>
@@ -65,7 +65,7 @@
     </form>
     </center>
       </div>
-      <div class="footer">
+      <div class="footer" id="footer">
         <ul>
             <li><a href="https://google.com/about">About</a></li>
             <li>Advertising</li>
